--- a/styles/main.css
+++ b/styles/main.css
@@ -33,8 +33,7 @@ button:focus {
   background-size: cover;
   background-position: center;
   position: relative;
-  font-weight: 400;
-  line-height: 1; }
+  font-weight: 400; }
   .header__nav {
     position: absolute;
     bottom: 25px;
@@ -47,12 +46,15 @@ button:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     color: white; }
   .header__phone {
     margin: 0 82px; }
   .header__phone, .header__action {
     position: relative;
-    top: 47px; }
+    top: 45px; }
   .header__link {
     color: white;
     text-decoration: none;
@@ -129,8 +131,7 @@ button:focus {
 
 @media (max-width: 999px) {
   .section {
-    padding-left: 40px;
-    padding-right: 40px; } }
+    padding: 0 40px; } }
 
 .info {
   display: -webkit-box;
@@ -366,7 +367,8 @@ button:focus {
     .contact__link:hover {
       color: #2f80ed; }
   .contact__address {
-    font-style: normal; }
+    font-style: normal;
+    margin: 10px 0; }
 
 @media (max-width: 999px) {
   .contact {
