--- a/styles/main.css
+++ b/styles/main.css
@@ -71,9 +71,12 @@ button:focus {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
-            flex-direction: column; }
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
   .header__phone {
-    margin: -40px 0 10px; } }
+    margin: -30px 0 10px; } }
 
 .nav {
   color: black;
@@ -131,7 +134,7 @@ button:focus {
 
 @media (max-width: 999px) {
   .section {
-    padding: 0 40px; } }
+    padding: 100px 40px; } }
 
 .info {
   display: -webkit-box;
@@ -357,18 +360,19 @@ button:focus {
       -ms-flex-pack: justify;
           justify-content: space-between; }
   .contact__text {
-    font-size: 24px;
     width: 280px; }
   .contact__form {
     width: 380px; }
+  .contact__address {
+    font-style: normal;
+    margin: 20px 0; }
+  .contact__link, .contact__address {
+    font-size: 24px; }
   .contact__link {
     color: black;
     text-decoration: none; }
     .contact__link:hover {
       color: #2f80ed; }
-  .contact__address {
-    font-style: normal;
-    margin: 10px 0; }
 
 @media (max-width: 999px) {
   .contact {
