--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,9 @@ button:focus {
   outline: none; }
 
 .header {
-  height: 765px;
+  height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-image: url("../images/header.jpg");
   background-size: cover;
   background-position: center;
