--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,7 @@ button:focus {
 
 .header {
   height: 100vh;
+  min-height: 500px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-image: url("../images/header.jpg");
@@ -78,7 +79,9 @@ button:focus {
         -ms-flex-align: center;
             align-items: center; }
   .header__phone {
-    margin: -30px 0 10px; } }
+    margin: -30px 0 10px; }
+  .header__nav {
+    margin-top: 50px; } }
 
 .nav {
   color: black;
